Fixed image overflow and added images to role components

--- a/src/app/modules/associate/associate.component.css
+++ b/src/app/modules/associate/associate.component.css
@@ -6,13 +6,16 @@
     padding: 8px;
 }
 
-.container {
-    margin: 10px;
-}
-
 .image {
+    display: block;
     max-width: 100%;
     max-height: 100%;  
-    position: relative;
+    left: 0;
+    top: 0;
     margin:auto;
+}
+
+.image-wrapper {
+    position: relative;
+    margin: auto;
 }
