--- a/src/app/modules/supervisor/supervisor.component.css
+++ b/src/app/modules/supervisor/supervisor.component.css
@@ -7,8 +7,15 @@
 }
 
 .image {
+    display: block;
     max-width: 100%;
     max-height: 100%;  
-    position: relative;
+    left: 0;
+    top: 0;
     margin:auto;
+}
+
+.image-wrapper {
+    position: relative;
+    margin: auto;
 }
